remove marca promocional 2 e adiciona o carrousel essenciais

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "nuxt": "^3.14.1592",
     "usebootstrap": "^3.5.100",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue3-carousel": "^0.13.0"
   },
   "devDependencies": {
     "nuxt-icon": "^1.0.0-beta.7"
